--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
 <script type="text/javascript" src="./home.js"></script>
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <p name="addGame">Add Game</p>
+    <button name="addGame">Add Game</button>
 </body>
 </html>
