--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Antmound</title>
+    <title>Formicid.io</title>
     <link rel="stylesheet" href="./index.css">
 </head>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
 <script type="text/javascript" src="./home.js"></script>
+<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <button name="addGame">Add Game</button>
+    <button id="addGame">Add Game</button>
 </body>
 </html>
