Transfer to laptop because keyboard is broken

--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
 <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <button id="addGame">Add Game</button>
+    <div>
+        <div id="Add_Game">
+            <button id="addGame">Add Game</button>
+        </div>
+        <div>
+            <span>
+                <div id="Choose_Game">
+                    <p>Select</p>
+                </div>
+            </span>
+        </div>
+    </div>
+    <canvas width="320" height="240"></canvas>
 </body>
 </html>
